fix(dashboard): fix responsiveness (overflowing)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -287,7 +287,7 @@ nav a {
   color: white;
   font-size: 1.2em;
   display: block;
-  text-alig0n: center;
+  text-align: center;
   text-decoration: none;
   padding: 1em 2em;
 }
@@ -303,7 +303,7 @@ nav a:hover {
   display: none;
   color: white;
   padding: 1em 20px;
-  z-index: 20;
+  z-index: 100;
   justify-content: flex-end;
   font-size: 20px;
 }
@@ -344,6 +344,8 @@ This element has a negative offset to ensure that the target section is not hidd
   justify-content: flex-start;
   flex-wrap: wrap;
   margin-bottom: 1em;
+  max-width: 100%;
+  overflow-x: auto;
 }
 
 .side-by-side > div {
@@ -379,9 +381,9 @@ This element has a negative offset to ensure that the target section is not hidd
   padding: 1em 1em;
 }
 
-@media screen and (max-width: 992px) {
-  .side-by-side div {
-    width: 40%;
+@media screen and (max-width: 768px) {
+  .container.responsive {
+    flex-wrap: wrap;
   }
 }
 
@@ -599,6 +601,8 @@ footer a {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  max-width: 100%;
+  overflow-x: auto;
 }
 
 .bloky {
